Feature: Translation for Documentation (en/ru) Feature: Maturities function for Russian Language

--- a/src/data/i18n/en/en.json
+++ b/src/data/i18n/en/en.json
@@ -1,38 +1,44 @@
 {
-  "section.community.chip": "Community",
-  "section.community.header": "Designed and developed by you.",
-  "section.community.description": "Files is free and open source software, maintained and designed by a collective of hundreds of contributors.",
-  "section.community.discussion": "Join the discussion.",
-  "section.community.contributor": "Become a contributor.",
-  "section.design.header": "Power meets beauty.",
-  "section.design.description": "Explore a beautiful Windows-first design. Manage all your files with increased productivity. Work across multiple folders with tabs. And so much more.",
-  "section.design.chip": "Design",
-  "section.design.download": "Download",
-  "section.design.learnmore": "Learn more",
-  "header.home": "Home",
-  "header.documentation": "Documentation",
-  "header.news": "News",
-  "section.features.chip": "Features",
-  "section.features.header": "It already does that.",
-  "section.features.description": "Cloud files integration? Tabs and multiple layouts? Rich file previews? Files has it covered with robust features you expect from a modern file manager.",
-  "section.features.cloud.title": "Seamless cloud integration",
-  "section.features.cloud.description": "Integration with cloud services such as OneDrive, Google Drive, and iCloud allow you to manage your documents and photos in the cloud, right from the sidebar.",
-  "section.features.filepreview.title": "File preview",
-  "section.features.filepreview.description": "Preview documents, photos, and more without opening them. Support for rich previews, syntax highlighting, markdown and video playback is all built in.",
-  "section.features.tags.title": "Tagged Files & Folders",
-  "section.features.tags.description": "Quickly mark and organize your files and folders for later by assigning them colored and named tags for easy identification. You can even add your own custom tags!",
-  "section.features.multitask.title": "Multitask with tabs",
-  "section.features.multitask.description": "Avoid multiple windows and keep your desktop clutter-free. Files features a browser-like tabbing interface complete with keyboard shortcuts.",
-  "section.themes.chip": "Themes",
-  "section.themes.title": "Distinctly personal.",
-  "section.themes.description": "Have it your way. Files features a fully customizable user interface, right down to the colors and materials. Try custom themes that are built into Files or dive right into the docs and create your own.",
-  "footer.pages.title": "Pages",
-  "footer.contribute.title": "Contribute to Files",
-  "footer.contribute.feedback": "Give Feedback",
-  "footer.contribute.styleguide": "Style Guide",
-  "footer.contribute.translations": "Translations",
-  "footer.website.title": "Contribute to this site",
-  "footer.website.github": "GitHub Repo",
-  "footer.website.bug": "Found a bug?",
-  "footer.team.title": "Web Team"
+	"section.community.chip": "Community",
+	"section.community.header": "Designed and developed by you.",
+	"section.community.description": "Files is free and open source software, maintained and designed by a collective of hundreds of contributors.",
+	"section.community.discussion": "Join the discussion.",
+	"section.community.contributor": "Become a contributor.",
+	"section.design.header": "Power meets beauty.",
+	"section.design.description": "Explore a beautiful Windows-first design. Manage all your files with increased productivity. Work across multiple folders with tabs. And so much more.",
+	"section.design.chip": "Design",
+	"section.design.download": "Download",
+	"section.design.learnmore": "Learn more",
+	"header.home": "Home",
+	"header.documentation": "Documentation",
+	"header.news": "News",
+	"section.features.chip": "Features",
+	"section.features.header": "It already does that.",
+	"section.features.description": "Cloud files integration? Tabs and multiple layouts? Rich file previews? Files has it covered with robust features you expect from a modern file manager.",
+	"section.features.cloud.title": "Seamless cloud integration",
+	"section.features.cloud.description": "Integration with cloud services such as OneDrive, Google Drive, and iCloud allow you to manage your documents and photos in the cloud, right from the sidebar.",
+	"section.features.filepreview.title": "File preview",
+	"section.features.filepreview.description": "Preview documents, photos, and more without opening them. Support for rich previews, syntax highlighting, markdown and video playback is all built in.",
+	"section.features.tags.title": "Tagged Files & Folders",
+	"section.features.tags.description": "Quickly mark and organize your files and folders for later by assigning them colored and named tags for easy identification. You can even add your own custom tags!",
+	"section.features.multitask.title": "Multitask with tabs",
+	"section.features.multitask.description": "Avoid multiple windows and keep your desktop clutter-free. Files features a browser-like tabbing interface complete with keyboard shortcuts.",
+	"section.themes.chip": "Themes",
+	"section.themes.title": "Distinctly personal.",
+	"section.themes.description": "Have it your way. Files features a fully customizable user interface, right down to the colors and materials. Try custom themes that are built into Files or dive right into the docs and create your own.",
+	"footer.pages.title": "Pages",
+	"footer.contribute.title": "Contribute to Files",
+	"footer.contribute.feedback": "Give Feedback",
+	"footer.contribute.styleguide": "Style Guide",
+	"footer.contribute.translations": "Translations",
+	"footer.website.title": "Contribute to this site",
+	"footer.website.github": "GitHub Repo",
+	"footer.website.bug": "Found a bug?",
+	"footer.team.title": "Web Team",
+	"section.news.readmore": "Read More",
+	"documentation.editpage": "Edit this page",
+	"documentation.search.placeholder": "Search Documentation",
+	"section.community.members.contribution_1": "contribution",
+	"section.community.members.contributions_2_5": "contributions",
+	"section.community.members.contributions_6_0": "contributions"
 }
