--- a/src/data/i18n/ru/ru.json
+++ b/src/data/i18n/ru/ru.json
@@ -1,52 +1,61 @@
 {
-  "section.design.header": "Сила встречается с красотой.",
-  "section.community.chip": "Сообщество",
-  "section.community.header": "Спроектировано и разработано вами.",
-  "section.community.description": "Files является свободным Open-Source программным обеспечением, которое поддерживается коллективом из сотни участников.",
-  "section.community.discussion": "Присоединиться к обсуждению.",
-  "section.community.contributor": "Стать участником.",
-  "section.design.description": "Откройте для себя красивый дизайн для Windows. \nУправляйте всеми своими файлами с повышенной производительностью. \nРаботайте с несколькими папками с помощью вкладок. \nИ многое другое.",
-  "section.design.chip": "Дизайн",
-  "section.design.download": "Скачать",
-  "section.design.learnmore": "Узнать больше",
-  "header.home": "Главная",
-  "header.documentation": "Документация",
-  "header.news": "Новости",
-  "section.features.chip": "Функции",
-  "section.features.header": "Уже сделано это.",
-  "section.features.description": "Интеграция с облачными файлами? \nВкладки и несколько макетов? \nРасширенный предварительный просмотр файлов? \nFiles обладает надежными функциями, которые вы ожидаете от современного файлового менеджера.",
-  "section.features.cloud.description": "Интеграция с облачными сервисами, такими как OneDrive, Google Drive и iCloud, позволяет вам управлять своими документами и фотографиями в облаке прямо с боковой панели.",
-  "section.features.cloud.title": "Полная облачная интеграция",
-  "section.features.filepreview.description": "Просматривайте документы, фотографии и многое другое, не открывая их. \nВстроена поддержка расширенного предварительного просмотра, подсветки синтаксиса, уценки и воспроизведения видео.",
-  "section.features.filepreview.title": "Предварительный просмотр файла",
-  "section.features.multitask.description": "Избегайте нескольких окон и избавьте свой рабочий стол от беспорядка. \nФайлы имеют браузерный интерфейс с вкладками и сочетаниями клавиш.",
-  "section.features.multitask.title": "Многозадачность с вкладками",
-  "section.features.tags.description": "Быстро помечайте и упорядочивайте свои файлы и папки на будущее, назначая им цветные и именованные теги для легкой идентификации. \nВы даже можете добавить свои собственные теги!",
-  "section.features.tags.title": "Файлы с тегами",
-  "section.themes.chip": "Темы",
-  "section.themes.description": "Будет так, как ты скажешь. \nFiles имеет полностью настраиваемый пользовательский интерфейс, вплоть до цветов и материалов. \nПопробуйте пользовательские темы, встроенные в Файлы, или погрузитесь прямо в документы и создайте свои собственные.",
-  "section.themes.title": "Персонализируй.",
-  "footer.contribute.feedback": "Дать обратную связь",
-  "footer.contribute.styleguide": "Руководство по стилю",
-  "footer.contribute.title": "Внести вклад в развитие Files",
-  "footer.contribute.translations": "Перевод",
-  "footer.pages.title": "Страницы",
-  "footer.team.title": "Команда",
-  "footer.website.bug": "Нашли ошибку?",
-  "footer.website.github": "Репозиторий GitHub",
-  "footer.website.title": "Внести вклад в развитие этого сайта",
-  "documentation.editpage": "Изменить эту страницу",
-  "documentation.search.placeholder": "Поиск документации",
-  "section.news.readmore": "Читать далее",
-  "section.community.members.contribution_1": "вклад",
-  "section.community.members.contributions_2_5": "вклада",
-  "section.community.members.contributions_6_0": "вкладов",
-  "errors.description": "О, нет! \nЧто-то пошло не так при загрузке этой страницы.",
-  "errors.name": "Ошибка",
-  "errors.return": "Вернуться домой",
-  "meta.header.blog": "Новости",
-  "meta.header.docs": "Документация",
-  "meta.header.download": "Скачать",
-  "meta.header.home": "Главная",
-  "meta.header.themes": "Темы"
+	"section.design.header": "Сила встречается с красотой.",
+	"section.community.chip": "Сообщество",
+	"section.community.header": "Спроектировано и разработано вами.",
+	"section.community.description": "Files является свободным Open-Source программным обеспечением, которое поддерживается коллективом из сотни участников.",
+	"section.community.discussion": "Присоединиться к обсуждению.",
+	"section.community.contributor": "Стать участником.",
+	"section.design.description": "Откройте для себя красивый дизайн для Windows. \nУправляйте всеми своими файлами с повышенной производительностью. \nРаботайте с несколькими папками с помощью вкладок. \nИ многое другое.",
+	"section.design.chip": "Дизайн",
+	"section.design.download": "Скачать",
+	"section.design.learnmore": "Узнать больше",
+	"header.home": "Главная",
+	"header.documentation": "Документация",
+	"header.news": "Новости",
+	"section.features.chip": "Функции",
+	"section.features.header": "Уже сделано это.",
+	"section.features.description": "Интеграция с облачными файлами? \nВкладки и несколько макетов? \nРасширенный предварительный просмотр файлов? \nFiles обладает надежными функциями, которые вы ожидаете от современного файлового менеджера.",
+	"section.features.cloud.description": "Интеграция с облачными сервисами, такими как OneDrive, Google Drive и iCloud, позволяет вам управлять своими документами и фотографиями в облаке прямо с боковой панели.",
+	"section.features.cloud.title": "Полная облачная интеграция",
+	"section.features.filepreview.description": "Просматривайте документы, фотографии и многое другое, не открывая их. \nВстроена поддержка расширенного предварительного просмотра, подсветки синтаксиса, уценки и воспроизведения видео.",
+	"section.features.filepreview.title": "Предварительный просмотр файла",
+	"section.features.multitask.description": "Избегайте нескольких окон и избавьте свой рабочий стол от беспорядка. \nФайлы имеют браузерный интерфейс с вкладками и сочетаниями клавиш.",
+	"section.features.multitask.title": "Многозадачность с вкладками",
+	"section.features.tags.description": "Быстро помечайте и упорядочивайте свои файлы и папки на будущее, назначая им цветные и именованные теги для легкой идентификации. \nВы даже можете добавить свои собственные теги!",
+	"section.features.tags.title": "Файлы с тегами",
+	"section.themes.chip": "Темы",
+	"section.themes.description": "Будет так, как ты скажешь. \nFiles имеет полностью настраиваемый пользовательский интерфейс, вплоть до цветов и материалов. \nПопробуйте пользовательские темы, встроенные в Файлы, или погрузитесь прямо в документы и создайте свои собственные.",
+	"section.themes.title": "Персонализируй.",
+	"footer.contribute.feedback": "Дать обратную связь",
+	"footer.contribute.styleguide": "Руководство по стилю",
+	"footer.contribute.title": "Внести вклад в развитие Files",
+	"footer.contribute.translations": "Перевод",
+	"footer.pages.title": "Страницы",
+	"footer.team.title": "Команда",
+	"footer.website.bug": "Нашли ошибку?",
+	"footer.website.github": "Репозиторий GitHub",
+	"footer.website.title": "Внести вклад в развитие этого сайта",
+	"documentation.editpage": "Изменить эту страницу",
+	"documentation.search.placeholder": "Поиск документации",
+	"section.news.readmore": "Читать далее",
+	"section.community.members.contribution_1": "вклад",
+	"section.community.members.contributions_2_5": "вклада",
+	"section.community.members.contributions_6_0": "вкладов",
+	"errors.description": "О, нет! \nЧто-то пошло не так при загрузке этой страницы.",
+	"errors.name": "Ошибка",
+	"errors.return": "Вернуться домой",
+	"meta.header.blog": "Новости",
+	"meta.header.docs": "Документация",
+	"meta.header.download": "Скачать",
+	"meta.header.home": "Главная",
+	"meta.header.themes": "Темы",
+	"download.sources.preview.description": "Получите ранний доступ к улучшениям и новым функциям",
+	"download.sources.preview.title": "Preview",
+	"download.sources.sideload.description": "Установить Files без Microsoft Store",
+	"download.sources.sideload.title": "Sideload",
+	"download.sources.store.description": "Получить файлы из Microsoft Store",
+	"download.sources.store.name": "Microsoft Store",
+	"download.sponsoring": "Пожалуйста, рассмотрите возможность спонсирования Files на GitHub!",
+	"download.sponsornow": "Спонсировать",
+	"download.title": "Скачать Files"
 }
