Fix: Download labels

--- a/src/data/i18n/ru/ru.json
+++ b/src/data/i18n/ru/ru.json
@@ -53,7 +53,7 @@
 	"download.sources.preview.title": "Preview",
 	"download.sources.sideload.description": "Установить Files без Microsoft Store",
 	"download.sources.sideload.title": "Sideload",
-	"download.sources.store.description": "Получить файлы из Microsoft Store",
+	"download.sources.store.description": "Получить Files из Microsoft Store",
 	"download.sources.store.name": "Microsoft Store",
 	"download.sponsoring": "Пожалуйста, рассмотрите возможность спонсирования Files на GitHub!",
 	"download.sponsornow": "Спонсировать",
