--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -45,7 +45,7 @@
 		},
 		"themes": {
 			"chip": "Themes",
-			"title": "Distictly personal.",
+			"title": "Distinctly personal.",
 			"description": "Have it your way. Files features a fully customizable user interface, right down to the colors and materials. Try custom themes that are built into Files or dive right into the docs and create your own.",
 			"grey_blue": "Dark Grey • Light Blue",
 			"grey_green": "Blue Grey • Neon Green",
