New Crowdin updates (#330)

--- a/src/i18n/locales/he-IL.json
+++ b/src/i18n/locales/he-IL.json
@@ -45,7 +45,7 @@
 		},
 		"themes": {
 			"chip": "ערכות נושא",
-			"title": "אישי וייחודי.",
+			"title": "Distinctly personal.",
 			"description": "עשה את זה בדרך שלך. Files מכיל ממשק משתמש שניתן להתאמה אישית מלאה, עד לצבעים והחומרים. נסה ערכות נושא מותאמות אישית שמגיעות עם Files או צלול להוראות וצור אחת משלך.",
 			"grey_blue": "אפור כהה • תכלת",
 			"grey_green": "אפור כחלחל • ירוק נאון",
@@ -79,7 +79,7 @@
 		"web_team": "צוות אתר"
 	},
 	"navbar": {
-		"ukraine": "#SupportUkraine",
+		"ukraine": "#תמכו_באוקראינה",
 		"home": "בית",
 		"docs": "תיעוד",
 		"news": "חדשות",
