--- a/src/i18n/locales/en-US.json
+++ b/src/i18n/locales/en-US.json
@@ -42,6 +42,11 @@
 				"title": "Multitask with tabs",
 				"description": "Avoid multiple windows and keep your desktop clutter-free. Files features a browser-like tabbing interface complete with keyboard shortcuts."
 			}
+			,
+			"columns": {
+				"title": "Organize files and directories in multiple columns",
+				"description":"Quickly navigate through columns to access different levels of the file system."
+			}
 		},
 		"themes": {
 			"chip": "Themes",
