--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -43,7 +43,7 @@
 				"description": "Avoid multiple windows and keep your desktop clutter-free. Files features a browser-like tabbing interface complete with keyboard shortcuts."
 			},
 			"columns": {
-				"title": "Organize files and directories in multiple columns",
+				"title": "Column view",
 				"description":"Quickly navigate through columns to access different levels of the file system."
 			}
 		},
