Added lang translations

--- a/src/i18n/locales/he-IL.json
+++ b/src/i18n/locales/he-IL.json
@@ -84,6 +84,7 @@
 		"docs": "תיעוד",
 		"news": "חדשות",
 		"themes": "ערכות נושא",
+		"download":"הורדה",
 		"discord": "דיסקורד",
 		"github": "GitHub"
 	}
