--- a/src/i18n/locales/hu-HU.json
+++ b/src/i18n/locales/hu-HU.json
@@ -84,6 +84,7 @@
 		"docs": "Dokumentáció",
 		"news": "Hírek",
 		"themes": "Témák",
+		"download":"Letöltés",
 		"discord": "Discord",
 		"github": "GitHub"
 	}
