--- a/src/i18n/locales/ja-JP.json
+++ b/src/i18n/locales/ja-JP.json
@@ -83,6 +83,7 @@
 		"home": "ホーム",
 		"docs": "ドキュメント",
 		"news": "ニュース",
+		"download":"ダウンロード",
 		"themes": "テーマ",
 		"discord": "Discord",
 		"github": "GitHub"
