--- a/src/i18n/locales/ru-RU.json
+++ b/src/i18n/locales/ru-RU.json
@@ -83,6 +83,7 @@
 		"home": "Главная",
 		"docs": "Документация",
 		"news": "Новости",
+		"download":"Скачать",
 		"themes": "Темы",
 		"discord": "Discord",
 		"github": "Github"
