--- a/src/i18n/locales/uk-UA.json
+++ b/src/i18n/locales/uk-UA.json
@@ -83,6 +83,7 @@
 		"home": "Головна",
 		"docs": "Документація",
 		"news": "Новини",
+		"download":"Завантажити",
 		"themes": "Теми",
 		"discord": "Discord",
 		"github": "Github"
