--- a/src/i18n/locales/fr-FR.json
+++ b/src/i18n/locales/fr-FR.json
@@ -83,6 +83,7 @@
 		"home": "Accueil",
 		"docs": "Documentation",
 		"news": "Actualités",
+		"download":"Téléchargement",
 		"themes": "Thèmes",
 		"discord": "Discord",
 		"github": "Github"
