--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -94,5 +94,22 @@
 		"themes": "Themes",
 		"discord": "Discord",
 		"github": "Github"
+	},
+	"download": {
+		"title": "Download Files",
+		"donation_description": "Please consider donating to support our work on Files",
+		"donation_button": "Donate",
+		"microsoft_store": {
+			"title": "Microsoft Store",
+			"description": "Purchasing Files through the Microsoft Store helps support the developers and allows us to continue updating the app with new features and improvements."
+		},
+		"preview": {
+			"title": "Preview",
+			"description": "The preview version can be installed alongside the stable release and provides early access to new features and improvements."
+		},
+		"self_signed": {
+			"link_text": "classic installer",
+			"description": "Don't have access to the Microsoft Store? Try our "
+		}
 	}
 }
