--- a/src/i18n/locales/hu-HU.json
+++ b/src/i18n/locales/hu-HU.json
@@ -1,8 +1,8 @@
 {
 	"metadata": {
-		"home": "{FilesName} • Home",
-		"docs_home": "{FilesName} • Docs",
-		"docs_page": "{FilesName} • Docs - {title}",
+		"home": "{FilesName} • Kezdőlap",
+		"docs_home": "{FilesName} • Dokumentáció",
+		"docs_page": "{FilesName} • Dokumentáció - {title}",
 		"description": "Building the best file manager for Windows."
 	},
 	"home": {
@@ -77,6 +77,7 @@
 		"home": "Kezdőlap",
 		"docs": "Dokumentáció",
 		"news": "Hírek",
+		"download": "Letöltés",
 		"contribute": "Contribute to {FilesName}",
 		"feedback": "Küldj visszajelzést",
 		"style_guide": "Kódstílus",
@@ -91,14 +92,15 @@
 		"home": "Kezdőlap",
 		"docs": "Dokumentáció",
 		"news": "Hírek",
+		"download": "Letöltés",
 		"themes": "Témák",
 		"discord": "Discord",
 		"github": "GitHub"
 	},
 	"download": {
-		"title": "Download {FilesName}",
+		"title": "{FilesName} letöltése",
 		"donation_description": "Please consider donating to support our work on {FilesName}",
-		"donation_button": "Donate",
+		"donation_button": "Támogatás",
 		"microsoft_store": {
 			"description": "Purchasing {FilesName} through the Microsoft Store helps support the developers and allows us to continue updating the app with new features and improvements."
 		},
