--- a/src/i18n/locales/ja-JP.json
+++ b/src/i18n/locales/ja-JP.json
@@ -1,15 +1,15 @@
 {
 	"metadata": {
-		"home": "{FilesName} • Home",
-		"docs_home": "{FilesName} • Docs",
-		"docs_page": "{FilesName} • Docs - {title}",
+		"home": "{FilesName} • ホーム",
+		"docs_home": "{FilesName} • ドキュメント",
+		"docs_page": "{FilesName} • ドキュメント - {title}",
 		"description": "Windowsの最高のファイルマネージャを作る。"
 	},
 	"home": {
 		"community": {
 			"chip": "コミュニティ",
 			"title": "設計、開発はあなたの声から。",
-			"description": "{FilesName} is free and open source software, maintained and designed by a collective of hundreds of contributors.",
+			"description": "{FilesName} は無料のオープンソースソフトウェアで、多くの開発者によってメンテナンス、設計されています。",
 			"discord": "議論に参加",
 			"docs": "開発者になる",
 			"contributions": "{amount, plural, =0 {コントリビューションなし} one {# コントリビューション} other {# コントリビューション}}"
@@ -24,7 +24,7 @@
 		"features": {
 			"chip": "機能",
 			"title": "準備万端。",
-			"description": "Cloud files integration? Tabs and multiple layouts? Rich file previews? {FilesName} has it covered with robust features you expect from a modern file manager.",
+			"description": "クラウドとの統合、タブ切り替え、画面分割機能、頼れるファイルプレビュー。{FilesName} は、現代のファイルマネージャーに期待される強力な機能を兼ね備えています。",
 			"unknown": "不明",
 			"cloud": {
 				"title": "シームレスなクラウド連携",
@@ -40,21 +40,21 @@
 			},
 			"tabs": {
 				"title": "複数のタブでマルチタスク",
-				"description": "Avoid multiple windows and keep your desktop clutter-free. {FilesName} features a browser-like tabbing interface complete with keyboard shortcuts."
+				"description": "複数のウインドウをまとめて、デスクトップをスッキリさせましょう。{FilesName} にはブラウザーのようなタブ機能を搭載しています。キーボードショートカットも使用可能です。"
 			},
 			"columns": {
-				"title": "Column view",
-				"description": "Quickly navigate through columns to access different levels of the file system."
+				"title": "カラムビュー",
+				"description": "カラムを素早く操作して、異なる階層のファイルにアクセスできます。"
 			},
 			"archives": {
 				"title": "アーカイブの表示と編集",
-				"description": "Manage zipped archives including zip, WinRar, 7zip and more. Drag & drop to add to existing archives, and use the create archive option to create encrypted archives."
+				"description": "zip, WinRar, 7zip などのアーカイブを管理しましょう。ドラッグ&ドロップで既存のアーカイブにファイルを追加できるほか、暗号化されたアーカイブを作成することもできます。"
 			}
 		},
 		"themes": {
 			"chip": "テーマ",
 			"title": "あなただけのファイラー。",
-			"description": "Have it your way. {FilesName} features a fully customizable user interface, right down to the colors and materials. Try custom themes that are built into {FilesName} or dive right into the docs and create your own.",
+			"description": "カスタマイズ性も抜群。{FilesName} は色から細かい見た目まで、さまざまにカスタマイズできます。{FilesName} に標準搭載されたテーマを試したり、ドキュメントを参照してカスタムテーマを作ったり、自由自在にカスタマイズしてみましょう。",
 			"grey_blue": "ダークグレー • ライトブルー",
 			"grey_green": "ブルーグレー • ネオングリーン",
 			"purple": "パープル",
@@ -77,7 +77,8 @@
 		"home": "ホーム",
 		"docs": "ドキュメント",
 		"news": "ニュース",
-		"contribute": "Contribute to {FilesName}",
+		"download": "ダウンロード",
+		"contribute": "{FilesName} に貢献",
 		"feedback": "フィードバックを送信",
 		"style_guide": "コーディング規約",
 		"translations": "翻訳",
@@ -91,24 +92,25 @@
 		"home": "ホーム",
 		"docs": "ドキュメント",
 		"news": "ニュース",
+		"download": "ダウンロード",
 		"themes": "テーマ",
 		"discord": "Discord",
 		"github": "GitHub"
 	},
 	"download": {
-		"title": "Download {FilesName}",
-		"donation_description": "Please consider donating to support our work on {FilesName}",
-		"donation_button": "Donate",
+		"title": "{FilesName} をダウンロード",
+		"donation_description": "{FilesName} の活動を支援するために寄付をご検討ください。",
+		"donation_button": "寄付",
 		"microsoft_store": {
-			"description": "Purchasing {FilesName} through the Microsoft Store helps support the developers and allows us to continue updating the app with new features and improvements."
+			"description": "{FilesName} を Microsoft Store 経由で購入することで、開発者をサポートし、新機能の追加やアプリの修正を継続できるようになります。"
 		},
 		"preview": {
-			"title": "Preview",
-			"description": "The preview version can be installed alongside the stable release and provides early access to new features and improvements."
+			"title": "プレビュー",
+			"description": "プレビュー版は安定版とともにインストールでき、新機能や改善点への早期アクセスを提供します。"
 		},
 		"self_signed": {
-			"link_text": "classic installer",
-			"description": "Don't have access to the Microsoft Store? Try our "
+			"link_text": "クラシックインストーラー",
+			"description": "Microsoft Store にアクセスできない場合: "
 		}
 	}
 }
