--- a/src/i18n/locales/kaa.json
+++ b/src/i18n/locales/kaa.json
@@ -1,41 +1,41 @@
 {
 	"metadata": {
-		"home": "{FilesName} • Home",
+		"home": "{FilesName} • Bas bet",
 		"docs_home": "{FilesName} • Docs",
 		"docs_page": "{FilesName} • Docs - {title}",
 		"description": "Building the best file manager for Windows."
 	},
 	"home": {
 		"community": {
-			"chip": "Community",
+			"chip": "Birlespe",
 			"title": "Designed and developed by you.",
 			"description": "{FilesName} is free and open source software, maintained and designed by a collective of hundreds of contributors.",
-			"discord": "Join the discussion",
-			"docs": "Become a contributor",
+			"discord": "Dodalawǵa qosılıw",
+			"docs": "Aǵza bolıw",
 			"contributions": "{amount, plural, =0 {No contributions} one {# contribution} other {# contributions}}"
 		},
 		"design": {
-			"chip": "Design",
-			"title": "Power meets beauty.",
+			"chip": "Dizayn",
+			"title": "Kúsh gózzallıq penen ushrasadı",
 			"description": "Explore a beautiful Windows-first design. Manage all your files with increased productivity. Work across multiple folders with tabs. And so much more.",
-			"download": "Júklew",
+			"download": "Júklep alıw",
 			"learn_more": "Tolıǵıraq úyreniw"
 		},
 		"features": {
-			"chip": "Features",
-			"title": "It already does that.",
+			"chip": "Funciyalar",
+			"title": "Bul álleqashan islendi.",
 			"description": "Cloud files integration? Tabs and multiple layouts? Rich file previews? {FilesName} has it covered with robust features you expect from a modern file manager.",
-			"unknown": "Unknown",
+			"unknown": "Belgisiz",
 			"cloud": {
-				"title": "Seamless cloud integration",
+				"title": "Bultlı xızmetler menen tolıq integraciya",
 				"description": "Integration with cloud services such as OneDrive, Google Drive, and iCloud allow you to manage your documents and photos in the cloud, right from the sidebar."
 			},
 			"preview": {
-				"title": "File preview",
+				"title": "Fayldı aldınnan kóriw",
 				"description": "Preview documents, photos, and more without opening them. Support for rich previews, syntax highlighting, markdown and video playback is all built in."
 			},
 			"tags": {
-				"title": "Tagged Files & Folders",
+				"title": "Fayllar hám papkalar belgiler menen",
 				"description": "Quickly mark and organize your files and folders for later by assigning them colored and named tags for easy identification. You can even add your own custom tags!"
 			},
 			"tabs": {
@@ -43,11 +43,11 @@
 				"description": "Avoid multiple windows and keep your desktop clutter-free. {FilesName} features a browser-like tabbing interface complete with keyboard shortcuts."
 			},
 			"columns": {
-				"title": "Column view",
-				"description": "Quickly navigate through columns to access different levels of the file system."
+				"title": "Qatar kórinisi",
+				"description": "Fayl sistemasınıń hár qıylı dárejelerine kiriw ushın qatarlar arqalı tez baǵdarlanıń."
 			},
 			"archives": {
-				"title": "View and edit archives",
+				"title": "Arxivlerdi kóriń hám ózgertiń",
 				"description": "Manage zipped archives including zip, WinRar, 7zip and more. Drag & drop to add to existing archives, and use the create archive option to create encrypted archives."
 			}
 		},
@@ -57,30 +57,31 @@
 			"description": "Have it your way. {FilesName} features a fully customizable user interface, right down to the colors and materials. Try custom themes that are built into {FilesName} or dive right into the docs and create your own.",
 			"grey_blue": "Dark Grey • Light Blue",
 			"grey_green": "Blue Grey • Neon Green",
-			"purple": "Purple",
-			"yellow_white": "Yellow • White",
+			"purple": "Qızǵılt kók",
+			"yellow_white": "Sarı • Aq",
 			"white_teal": "Cool White • Dark Teal",
-			"sky_blue": "Sky Blue",
-			"select_theme": "Select theme #{index}"
+			"sky_blue": "Aqshıl kók",
+			"select_theme": "#{index} temasın tańlaw"
 		}
 	},
 	"blog": {
-		"coming_soon": "More posts coming soon!",
-		"read_more": "Read More"
+		"coming_soon": "Kóbirek jańalıqlar jaqın arada!",
+		"read_more": "Dawamın oqıw"
 	},
 	"docs": {
 		"autocomplete_empty": "Nátiyjeler tabılmadı",
 		"edit_page": "Bul betke ózgeris kirgiziw"
 	},
 	"footer": {
-		"copyright": "Copyright © 2021 - {year}, The {FilesName} Authors",
+		"copyright": "Barlıq huqıqlar qorǵalǵan © 2021 - {year}, {FilesName} Avtorları",
 		"home": "Bas bet",
 		"docs": "Docs",
 		"news": "Jańalıqlar",
-		"contribute": "Contribute to {FilesName}",
-		"feedback": "Give Feedback",
+		"download": "Júklep alıw",
+		"contribute": "{FilesName} rawajlanıwına úles qosıw",
+		"feedback": "Qayta baylanıs",
 		"style_guide": "Style Guide",
-		"translations": "Translations",
+		"translations": "Awdarmalar",
 		"contribute_site": "Bul sayttıń rawajlanıwına úles qosıw",
 		"github": "Github Repo",
 		"report_bug": "Qátelik tawdıńızba?",
@@ -91,24 +92,25 @@
 		"home": "Bas bet",
 		"docs": "Documentation",
 		"news": "Jańalıqlar",
+		"download": "Júklep alıw",
 		"themes": "Temalar",
 		"discord": "Discord",
 		"github": "Github"
 	},
 	"download": {
-		"title": "Download {FilesName}",
+		"title": "{FilesName}dı júklep alıw",
 		"donation_description": "Please consider donating to support our work on {FilesName}",
-		"donation_button": "Donate",
+		"donation_button": "Qollap-quwatlaw",
 		"microsoft_store": {
 			"description": "Purchasing {FilesName} through the Microsoft Store helps support the developers and allows us to continue updating the app with new features and improvements."
 		},
 		"preview": {
-			"title": "Preview",
+			"title": "Aldınnan kóriw versiyası",
 			"description": "The preview version can be installed alongside the stable release and provides early access to new features and improvements."
 		},
 		"self_signed": {
-			"link_text": "classic installer",
-			"description": "Don't have access to the Microsoft Store? Try our "
+			"link_text": "klassikalıq ornatıwshı",
+			"description": "Microsoft Storeǵa kiriw múmkinshiligi joq pa? Sınap kórıń: "
 		}
 	}
 }
