--- a/src/i18n/locales/no-NO.json
+++ b/src/i18n/locales/no-NO.json
@@ -1,114 +1,116 @@
 {
 	"metadata": {
-		"home": "{FilesName} • Home",
-		"docs_home": "{FilesName} • Docs",
-		"docs_page": "{FilesName} • Docs - {title}",
-		"description": "Building the best file manager for Windows."
+		"home": "{FilesName} • Startside",
+		"docs_home": "{FilesName} • Dokumentasjon",
+		"docs_page": "{FilesName} • Dokumentasjon - {title}",
+		"description": "Bygger den beste filutforskeren for Windows."
 	},
 	"home": {
 		"community": {
-			"chip": "Community",
-			"title": "Designed and developed by you.",
-			"description": "{FilesName} is free and open source software, maintained and designed by a collective of hundreds of contributors.",
-			"discord": "Join the discussion",
-			"docs": "Become a contributor",
-			"contributions": "{amount, plural, =0 {No contributions} one {# contribution} other {# contributions}}"
+			"chip": "Fellesskap",
+			"title": "Designet og utviklet av dere.",
+			"description": "{FilesName} er en gratis og åpen kildekode-programvare, vedlikeholdt og designet av et kollektiv med hundrevis av bidragere.",
+			"discord": "Bli med i diskusjonen",
+			"docs": "Bli en bidrager",
+			"contributions": "{amount, plural, =0 {Ingen bidrag} one {# bidrag} other {# bidrag}}"
 		},
 		"design": {
 			"chip": "Design",
-			"title": "Power meets beauty.",
-			"description": "Explore a beautiful Windows-first design. Manage all your files with increased productivity. Work across multiple folders with tabs. And so much more.",
-			"download": "Download",
-			"learn_more": "Learn more"
+			"title": "Makt møter skjønnhet.",
+			"description": "Utforsk et vakkert Windows design. Administrer alle dine filer med økt produktivitet. Gå mellom flere mapper med faner. Og masse mer.",
+			"download": "Last ned",
+			"learn_more": "Finn ut mer"
 		},
 		"features": {
-			"chip": "Features",
-			"title": "It already does that.",
-			"description": "Cloud files integration? Tabs and multiple layouts? Rich file previews? {FilesName} has it covered with robust features you expect from a modern file manager.",
-			"unknown": "Unknown",
+			"chip": "Egenskaper",
+			"title": "Den gjør allerede det.",
+			"description": "Sky filer integrering? Faner og flere utforminger? Rik fil forhåndsvisning? {FilesName} har den dekket med robuste funksjoner du forventer fra en moderne fil manager.",
+			"unknown": "Ukjent",
 			"cloud": {
-				"title": "Seamless cloud integration",
-				"description": "Integration with cloud services such as OneDrive, Google Drive, and iCloud allow you to manage your documents and photos in the cloud, right from the sidebar."
+				"title": "Sømløs sky-integrasjon",
+				"description": "Integrering av skytjenester som OneDrive, Google Drive, og iCloud lar deg administrere dine dokumenter og bilder i skyen, rett fra sidepanelet."
 			},
 			"preview": {
-				"title": "File preview",
-				"description": "Preview documents, photos, and more without opening them. Support for rich previews, syntax highlighting, markdown and video playback is all built in."
+				"title": "Fil forhåndsvisning",
+				"description": "Forhåndsvisning av dokumenter, bilder og mer uten å åpne dem. Støtte for rike forhåndsvisninger, syntaksutheving, markdown og videoavspilling er alt innebygget."
 			},
 			"tags": {
-				"title": "Tagged Files & Folders",
-				"description": "Quickly mark and organize your files and folders for later by assigning them colored and named tags for easy identification. You can even add your own custom tags!"
+				"title": "Merkede filer og mapper",
+				"description": "Merk raskt og organiser filene og mappene dine for senere ved å tilordne dem fargede og navngitte tagger for enkel identifikasjon. Du kan også legge til dine egne tilpassede tagger!"
 			},
 			"tabs": {
-				"title": "Multitask with tabs",
-				"description": "Avoid multiple windows and keep your desktop clutter-free. {FilesName} features a browser-like tabbing interface complete with keyboard shortcuts."
+				"title": "Multitask med faner",
+				"description": "Unngå flere vinduer og å holde skrivebordet helt tomt. {FilesName} fungerer nettleser-lignende fane-grensesnitt komplett med tastatursnarveier."
 			},
 			"columns": {
-				"title": "Column view",
-				"description": "Quickly navigate through columns to access different levels of the file system."
+				"title": "Kolonne visning",
+				"description": "Gå raskt gjennom kolonner for å få tilgang til forskjellige nivåer i filsystemet."
 			},
 			"archives": {
-				"title": "View and edit archives",
-				"description": "Manage zipped archives including zip, WinRar, 7zip and more. Drag & drop to add to existing archives, and use the create archive option to create encrypted archives."
+				"title": "Vis og rediger arkiver",
+				"description": "Behandle pakkede arkiv inkludert zip, WinRar, 7zip og mer. Dra og slipp for å legge til eksisterende arkiver, og bruk opprettelsen av arkivvalget for å opprette krypterte arkiver."
 			}
 		},
 		"themes": {
-			"chip": "Themes",
-			"title": "Distinctly personal.",
-			"description": "Have it your way. {FilesName} features a fully customizable user interface, right down to the colors and materials. Try custom themes that are built into {FilesName} or dive right into the docs and create your own.",
-			"grey_blue": "Dark Grey • Light Blue",
-			"grey_green": "Blue Grey • Neon Green",
-			"purple": "Purple",
-			"yellow_white": "Yellow • White",
-			"white_teal": "Cool White • Dark Teal",
-			"sky_blue": "Sky Blue",
-			"select_theme": "Select theme #{index}"
+			"chip": "Temaer",
+			"title": "Distinktivt personlig.",
+			"description": "Ha som du vil. {FilesName} har et fullt tilpassbart brukergrensesnitt, rett ned til farger og materialer. Prøv tilpassede temaer som er bygget rett inn i {FilesName} eller dykke inn i dokumentasjonen og lag dine egne.",
+			"grey_blue": "Mørke Grå • Lyseblå",
+			"grey_green": "Blå grå • Neon Grønn",
+			"purple": "Lilla",
+			"yellow_white": "Gul • Hvit",
+			"white_teal": "Kald hvit • Mørk Blågrønn",
+			"sky_blue": "Sky Blå",
+			"select_theme": "Velg tema #{index}"
 		}
 	},
 	"blog": {
-		"coming_soon": "More posts coming soon!",
-		"read_more": "Read More"
+		"coming_soon": "Flere poster kommer snart!",
+		"read_more": "Les mer"
 	},
 	"docs": {
-		"autocomplete_empty": "No results found",
-		"edit_page": "Edit this page"
+		"autocomplete_empty": "Ingen resultater funnet",
+		"edit_page": "Rediger denne siden"
 	},
 	"footer": {
-		"copyright": "Copyright © 2021 - {year}, The {FilesName} Authors",
-		"home": "Home",
-		"docs": "Docs",
-		"news": "News",
-		"contribute": "Contribute to {FilesName}",
-		"feedback": "Give Feedback",
-		"style_guide": "Style Guide",
-		"translations": "Translations",
-		"contribute_site": "Contribute to this site",
+		"copyright": "Opphavsrett © 2021 - {year}, {FilesName} Forfatterne",
+		"home": "Startside",
+		"docs": "Dokumentasjon",
+		"news": "Nyheter",
+		"download": "Last ned",
+		"contribute": "Bidra til {FilesName}",
+		"feedback": "Gi tilbakemelding",
+		"style_guide": "Stilguide",
+		"translations": "Oversettelser",
+		"contribute_site": "Forbered denne sida",
 		"github": "Github Repo",
-		"report_bug": "Found a bug?",
-		"web_team": "Web Team"
+		"report_bug": "Funnet en feil?",
+		"web_team": "Web lag"
 	},
 	"navbar": {
-		"ukraine": "#SupportUkraine",
-		"home": "Home",
-		"docs": "Documentation",
-		"news": "News",
-		"themes": "Themes",
+		"ukraine": "#StøttUkraina",
+		"home": "Startside",
+		"docs": "Dokumentasjon",
+		"news": "Nyheter",
+		"download": "Last ned",
+		"themes": "Temaer",
 		"discord": "Discord",
-		"github": "Github"
+		"github": "GitHub"
 	},
 	"download": {
-		"title": "Download {FilesName}",
-		"donation_description": "Please consider donating to support our work on {FilesName}",
-		"donation_button": "Donate",
+		"title": "Last ned {FilesName}",
+		"donation_description": "Vurder å donere for å støtte vårt arbeid med {FilesName}",
+		"donation_button": "Doner",
 		"microsoft_store": {
-			"description": "Purchasing {FilesName} through the Microsoft Store helps support the developers and allows us to continue updating the app with new features and improvements."
+			"description": "Kjøp av {FilesName} gjennom Microsoft Store hjelper oss med å støtte utviklerne og lar oss fortsette å oppdatere appen med nye funksjoner og forbedringer."
 		},
 		"preview": {
-			"title": "Preview",
-			"description": "The preview version can be installed alongside the stable release and provides early access to new features and improvements."
+			"title": "Forhåndsvisning",
+			"description": "Beta versjonen eller Forhåndsvisningsversjonen kan installeres sammen med den stabile versjonen og gir tidlig tilgang til nye funksjoner og forbedringer."
 		},
 		"self_signed": {
-			"link_text": "classic installer",
-			"description": "Don't have access to the Microsoft Store? Try our "
+			"link_text": "klassiske installasjonsprogram",
+			"description": "Har du ikke tilgang til Microsoft Store? Prøv vårt "
 		}
 	}
 }
